--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,22 @@
 # Core dependencies
-python-binance>=1.0.19
+python-binance==1.0.19
 ccxt>=4.1.13
-pandas>=2.0.0
-numpy>=1.24.0
+pandas==2.1.4
+numpy==1.26.2
 scikit-learn>=1.3.0
 xgboost>=2.0.0
 fastapi>=0.100.0
 uvicorn>=0.23.0
-sqlalchemy>=2.0.0
-psycopg2-binary>=2.9.0
+sqlalchemy==2.0.23
+psycopg2-binary==2.9.9
 redis>=5.0.0
-aiohttp>=3.8.0
-websockets>=11.0.0
-python-dotenv>=1.0.0
+aiohttp==3.9.1
+websockets==12.0
+python-dotenv==1.0.0
 pydantic>=2.0.0
-ta>=0.10.0  # Technical analysis library 
+ta==0.10.2
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-cov==4.1.0
+python-dateutil==2.8.2
+pytz==2023.3.post1 
