--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "crypto-trading-bot-frontend",
+  "name": "crypto-trading-bot-ui",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "@mui/icons-material": "^5.14.19",
-    "@mui/material": "^5.14.20",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "axios": "^1.6.2",
-    "chart.js": "^4.4.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.0",
+    "@mui/x-data-grid": "^6.4.0",
+    "@mui/x-date-pickers": "^6.4.0",
+    "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.0",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
-    "recharts": "^2.10.1",
-    "socket.io-client": "^4.7.2",
-    "web-vitals": "^2.1.4"
+    "recharts": "^2.6.2",
+    "socket.io-client": "^4.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
