--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,26 @@
 # Core dependencies
-python-binance==1.0.19
+python-binance==1.0.17
 ccxt>=4.1.13
-pandas==2.1.4
-numpy==1.26.2
+pandas==2.0.1
+numpy==1.24.3
 scikit-learn>=1.3.0
 xgboost>=2.0.0
-fastapi>=0.100.0
-uvicorn>=0.23.0
-sqlalchemy==2.0.23
-psycopg2-binary==2.9.9
+fastapi==0.95.2
+uvicorn==0.22.0
+sqlalchemy==2.0.12
+psycopg2-binary==2.9.6
 redis>=5.0.0
-aiohttp==3.9.1
-websockets==12.0
+aiohttp==3.8.4
+websockets==11.0.3
 python-dotenv==1.0.0
-pydantic>=2.0.0
+pydantic==1.10.7
 ta==0.10.2
-pytest==7.4.3
-pytest-asyncio==0.21.1
+pytest==7.3.1
+pytest-asyncio==0.21.0
 pytest-cov==4.1.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
-
-# Web UI dependencies
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-multipart==0.0.6
-pydantic==2.5.3
-pydantic-settings==2.1.0
-python-socketio==5.10.0 
+python-jose==3.3.0
+passlib==1.7.4
+bcrypt==4.0.1
+python-multipart==0.0.6 
