--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,6 +11,7 @@ trading:
   funding_rate_interval: 300        # seconds
   position_interval: 30             # seconds
   signal_interval: 15               # seconds
+  monitor_interval: 10              # seconds
   scan_interval: 10                 # seconds
   max_open_trades: 5
   min_volume_usdt: 1000000
