--- a/.env
+++ b/.env
@@ -13,6 +13,18 @@ DB_POOL_SIZE=5
 DB_MAX_OVERFLOW=10
 DB_ECHO=False
 
+# Database Configuration (Docker)
+POSTGRES_USER=trader
+POSTGRES_PASSWORD=current_password
+POSTGRES_DB=crypto_trading
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+DB_POOL_SIZE=5
+DB_MAX_OVERFLOW=10
+DB_POOL_TIMEOUT=30
+DB_POOL_RECYCLE=1800
+DB_ECHO=False
+
 # ===============================
 # 🌐 API / Web Configuration
 # ===============================
