--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ lib64/
 parts/
 sdist/
 var/
+wheels/
 *.egg-info/
 .installed.cfg
 *.egg
@@ -42,17 +43,19 @@ ENV/
 # Logs
 logs/
 *.log
+*.log.*
 
-# Local configuration
+# Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
 
 # Database
 *.db
 *.sqlite3
+
+# OS
+.DS_Store
+Thumbs.db
 
 # OS specific
 .DS_Store
