Fix WebSocket console errors and implement manual trading - Added manual trading buttons, auto-trading toggle, eliminated 50k+ WebSocket errors, implemented HTTP polling, added risk management, fixed frontend port conflicts, and optimized React build

--- a/.env
+++ b/.env
@@ -124,3 +124,15 @@ ADJUSTMENT_FACTOR=0.1
 HEALTH_CHECK_INTERVAL=60
 
 API_KEY=crypto_trading_bot_api_key_2024
+
+# Missing API URLs
+BINANCE_API_URL=https://fapi.binance.com
+BINANCE_WS_URL=wss://fstream.binance.com/ws
+
+# Missing Risk Management
+DAILY_LOSS_LIMIT=1000.0
+POSITION_SIZE_LIMIT=10000.0
+
+# Missing Monitoring Intervals
+FUNDING_RATE_CHECK_INTERVAL=300
+POSITION_UPDATE_INTERVAL=30
