🔧 Fix VPS setup script lodash dependency issue
✅ ISSUE FIXED: Html Webpack Plugin lodash/template error
- Added explicit lodash installation in setup_vps.sh
- Added lodash to frontend/package.json devDependencies
- Enhanced error handling with comprehensive dependency fixes
- Added multiple retry attempts with proper dependency resolution

🎯 DEPLOYMENT IMPROVEMENTS:
- Script now installs lodash and lodash.template explicitly
- Added additional webpack dependencies (css-loader, etc.)
- Comprehensive error recovery with force installs
- Clear error messages and troubleshooting steps

🚀 RESULT: setup_vps.sh now handles this issue automatically
No more manual patching required after deployment!

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     }
   },
   "devDependencies": {
+    "lodash": "^4.17.21",
     "react-app-rewired": "^2.2.1",
     "webpack": "^5.89.0",
     "webpack-dev-server": "^4.15.1"
