Complete crypto trading bot system with automated learning
- Enhanced signal tracking with real-time PnL monitoring
- Automated learning manager that adapts criteria based on performance
- Multi-mode trading: stable, swing trading, and precision scalping
- Comprehensive backtesting framework with market regime analysis
- Dynamic strategy configuration with volatility adaptation
- Robust error handling with proxy rotation and failover
- React frontend with dark theme and real-time updates
- PostgreSQL integration for signal and performance tracking
- WebSocket support for live market data feeds
- Background task management for continuous operation

System now learns automatically from 0% win rate and adjusts:
- Confidence thresholds, volatility limits, stop loss widths
- Emergency strategy disabling and catastrophic failure recovery
- Dual reality tracking (actual vs virtual performance)
- Golden signal identification and pattern learning

--- a/.env
+++ b/.env
@@ -155,3 +155,4 @@ POSITION_SIZE_LIMIT=0.1
 FUNDING_RATE_CHECK_INTERVAL=3600
 POSITION_UPDATE_INTERVAL=300
 PLACE_REAL_ORDERS=false
+API_KEY=crypto_trading_api_key_2024
