--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ python-binance==1.0.17
 ccxt>=4.1.13
 pandas>=2.1.4
 numpy>=1.26.0
+scipy>=1.11.0
 scikit-learn>=1.3.0
 xgboost>=2.0.0
 ta>=0.10.2,<0.11.0
