--- a/config/config.yaml
+++ b/config/config.yaml
@@ -37,7 +37,7 @@ paper_trading:
   enabled: true
   initial_balance: 10000.0
   risk_per_trade_pct: 0.05
-  max_positions: 20
+  max_positions: 2
   leverage: 10.0
   primary_target_dollars: 18.0
   absolute_floor_dollars: 15.0
@@ -47,6 +47,19 @@ paper_trading:
   fees:
     rate: 0.0004  # 0.04% entry fee
     close_rate: 0.0004  # 0.04% exit fee
+
+real_trading:
+  enabled: true  # ✅ ENABLED FOR REAL TRADING
+  stake_usd: 200.0  # Fixed $200 per trade
+  max_positions: 20  # Maximum concurrent positions
+  accept_sources: ["opportunity_manager"]  # Only OpportunityManager signals
+  pure_3_rule_mode: true  # Enable Pure 3-rule mode
+  primary_target_dollars: 10.0  # $10 take profit target
+  absolute_floor_dollars: 7.0  # $7 floor protection
+  stop_loss_percent: 0.5  # 0.5% stop loss from entry
+  default_leverage: 3  # Conservative 3x leverage default
+  max_leverage: 5  # Maximum 5x leverage cap
+  max_daily_loss: 500.0  # $500 daily loss limit
 
 signal_sources:
   pure_profit_scraping_mode: true
