--- a/config/config.yaml
+++ b/config/config.yaml
@@ -37,7 +37,7 @@ paper_trading:
   enabled: true
   initial_balance: 10000.0
   risk_per_trade_pct: 0.05
-  max_positions: 2
+  max_positions: 20
   leverage: 10.0
   primary_target_dollars: 18.0
   absolute_floor_dollars: 15.0
@@ -92,3 +92,14 @@ strategy:
         max_spread: 0.5
         min_volatility: 0.5
         max_volatility: 5.0
+
+# Directional accuracy improvements
+opportunity_manager:
+  signal_lifetime_sec: 300
+  min_signal_change_interval_sec: 60
+  hysteresis_momentum_mult: 1.25   # used by _should_accept_flip
+  base_momentum_threshold: 0.001   # 0.1% baseline for hysteresis guard
+
+real_trading:
+  signal_freshness_max_sec: 90
+  max_entry_price_drift: 0.002     # 0.2%
