--- a/config/config.yaml
+++ b/config/config.yaml
@@ -38,6 +38,8 @@ paper_trading:
   initial_balance: 10000.0
   risk_per_trade_pct: 0.05
   max_positions: 20
+  max_positions_per_symbol: 2  # Maximum 2 positions per symbol (prevents concentration risk)
+  stake_amount: 500.0  # $500 per trade
   leverage: 10.0
   primary_target_dollars: 18.0
   absolute_floor_dollars: 15.0
