--- a/config/config.yaml
+++ b/config/config.yaml
@@ -62,8 +62,8 @@ real_trading:
   accept_sources: ["opportunity_manager"]  # Only OpportunityManager signals
   pure_3_rule_mode: true  # Enable Pure 3-rule mode
   primary_target_dollars: 18.0  # $10 take profit target
-  absolute_floor_dollars: .0  # $7 floor protection
-  stop_loss_percent: 0.0  # 0.5% stop loss from entry
+  absolute_floor_dollars: 5.0  # $7 floor protection
+  stop_loss_percent: 0.5  # 0.5% stop loss from entry
   default_leverage: 10  # Default 10x leverage
   max_leverage: 15  # Maximum 20x leverage cap
   max_daily_loss: 500.0  # $500 daily loss limit
@@ -76,6 +76,10 @@ real_trading:
   trailing_increment_dollars: 10.0      # Ratchet up by $10 each time
   trailing_cap_dollars: 100.0           # Hard take profit cap at $100
   trailing_floor_start_dollars: 15.0    # Start trailing from $15
+  
+  # NEW: order placement toggles
+  enable_take_profit: true   # leave TP on
+  enable_stop_loss: false    # << turn SL OFF
 
 signal_sources:
   pure_profit_scraping_mode: false
@@ -99,7 +103,7 @@ strategy:
       parameters:
         entry_threshold: 0.02
         exit_threshold: 0.01
-        stop_loss: 0.00
+        stop_loss: 0.03
         take_profit: 0.05
         max_position_size: 0.1
         leverage: 10.0
